samples/_failures_safe/1761200565_2b88eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4bd5e37.c: In function ‘create_tetrahedron’:
./samples/SAFE/__tmp_e4bd5e37.c:139:9: error: expected expression at end of input
  139 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_e4bd5e37.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4bd5e37.c:139:9: error: expected declaration or statement at end of input
